[package]
name = "had"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.23.0", features = ["tokio-comp", "cluster-async", "json"] }
futures = "0.3"
futures-util = "0.3"
rayon = "1"
uuid = { version = "1", features = ["serde", "v4"] }
borsh = "0.10"
serde_json = "1"
pretty_env_logger = "0.4"
env_logger = "0.10.0"
dotenv = "0.15"
log = "0.4"
lazy_static = "1"
serde = {version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.17.1"



[[bin]]
name = "had"
path = "src/main.rs"


[lib]
name = "ratelimiter"
path = "src/lib.rs"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
overflow-checks = true # panic on any overflow