[package]
name = "hadead"
version = "0.1.5"
edition = "2021"
authors = ["wildonion <abarmardeatashyne@gmail.com>"]
description = "Redis Rate Limiter using wallexerr"
homepage = "https://github.com/wildonion/hadead/"
keywords = ["redis", "ratelimiter", "wallexerr", "ed25519"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wildonion/hadead/"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.23.0", features = ["tokio-comp", "cluster-async", "json"] }
futures = "0.3"
futures-util = "0.3"
serde_json = "1"
env_logger = "0.10.0"
log = "0.4"
serde = {version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
wallexerr = "0.2.1"


[lib]
# libraries don't have entry points, you can't run them,they're used for functionality sharing like binding a .wasm into js codes
# we need lib.rs and crate type of cdylib for none binary like .wasm, .so, .dylib and .dll files or for tests
crate-type = ["cdylib", "rlib"]
name = "hadead"
path = "src/lib.rs"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
overflow-checks = true # panic on any overflow